--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.9.0",
     "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "reactjs-popup": "^1.4.1"
   },
   "scripts": {
